<resources>
    <string name="app_name">practice3</string>
    <string name="welcome_to_android">Welcome to Android!</string>
    <string name="newtext">practice3</string>
    <string name="test_text">Text12345</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="first_vert">First_vert</string>
    <string name="second_vert">Second_vert</string>
    <string name="third_vert">Third_vert</string>
</resources>